return <groupId>com.github.hazendaz.maven</groupId>

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
     <version>24</version>
     <relativePath />
   </parent>
+  
+  <groupId>com.github.hazendaz.maven</groupId>
+  <artifactId>htmlcompressor-maven-plugin</artifactId>
+  <version>1.5.2-SNAPSHOT</version>
+  <packaging>maven-plugin</packaging>
 
   <name>Maven HTMLCompressor Plugin</name>
   <description>Maven HTMLCompressor Plugin allows to compress html/xml by adding a few lines to the pom file.</description>
