--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <version>24</version>
     <relativePath />
   </parent>
-  
+
   <groupId>com.github.hazendaz.maven</groupId>
   <artifactId>htmlcompressor-maven-plugin</artifactId>
   <version>1.5.2-SNAPSHOT</version>
@@ -58,17 +58,17 @@
     <system>GitHub Issue Tracking</system>
     <url>https://github.com/alextunyk/htmlcompressor-maven-plugin/issues</url>
   </issueManagement>
+  <ciManagement>
+    <system>Travis CI</system>
+    <url>https://travis-ci.org/hazendaz/htmlcompressor-maven-plugin</url>
+  </ciManagement>
   <distributionManagement>
-    <snapshotRepository>
-      <id>nexus-snapshots</id>
-      <url>http://nexus.localdomain/repository/maven-snapshots/</url>
-    </snapshotRepository>
-    <repository>
-      <id>nexus-releases</id>
-      <url>http://nexus.localdomain/repository/maven-releases/</url>
-    </repository>
+    <site>
+        <id>gh-pages</id>
+        <name>GitHub Pages</name>
+        <url>github:https://alextunyk.github.io/htmlcompressor-maven-plugin/</url>
+    </site>
   </distributionManagement>
-
 
   <dependencies>
     <dependency>
@@ -163,15 +163,6 @@
           </execution>
         </executions>
       </plugin>
-      <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.5.1</version>
-            <configuration>
-                <source>1.8</source>
-                <target>1.8</target>
-            </configuration>
-        </plugin>
     </plugins>
   </build>
 
