--- a/pom.xml
+++ b/pom.xml
@@ -63,12 +63,12 @@
     <url>https://travis-ci.org/hazendaz/htmlcompressor-maven-plugin</url>
   </ciManagement>
   <distributionManagement>
-    <site>
-        <id>gh-pages</id>
-        <name>GitHub Pages</name>
-        <url>github:https://alextunyk.github.io/htmlcompressor-maven-plugin/</url>
-    </site>
+      <snapshotRepository>
+        <id>nexus</id>
+        <url>http://localhost:8081/repository/maven-snapshots/</url>
+      </snapshotRepository>
   </distributionManagement>
+
 
   <dependencies>
     <dependency>
